Version 7.4
===========
Bug Fixes
* The dockbar's parent for dock containers was set incorrectly. The wrong 
   dockbar could be destroyed when a dock container was destroyed.   
* Corrected variable initialisation in CMenuMetrics
* Adjusted text position in Windows 7 menus.
* Minor bug fixes to CString
* CSocket now works for WinCE  
	 
New Features and Enhancements
* TRACE now accepts both ANSI and Unicode strings.
* CFile functions are now virtual
* Frames now use IDW_READY for the "Ready" string
* Added project files for VS2013


Changes in detail
-----------------
- Added SafeLoadSystemLibrary
- Added CRect operator LPCRECT()
- Added CTab::SetFont
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CString  operator == 		now accepts const
- Modified CString  operator != 		now accepts const
- Modified CString  operator [] 		now accepts const
- Modified  CWnd::DeferWindowPos		now uses CWnd* for second argument

Added IDW_READY resource for ready string.
Added VS2013 project files


Version 7.3
===========

New Features and Enhancements
-----------------------------
* Adjusted the frame's appearance
	- Updated the visual appearance of popup menus on systems using Windows Aero. On 
	  systems with Aero, popup menus are rendered with Windows Visual Styles. Systems
	  without Aero continue to use the Win32++ theme for popup menus.
	- Frames now honour the current window theme's menu and status fonts.
	- the frame's appearance changes dynamically to reflect changes to the window theme.
	- minor adjustment to the rebar theme colours for the "Modern" theme.
	
* Extended CWebBrowser
	The CWebBrower class has been extended to wrap the member functions of
	iWebBrowser2. The Browser sample has been updated and now supports
	Copy/Paste.

* Added the following controls
   - CDateTime
   - CHeader
   - CHotKey
   - CIPAddress
   - CMonthCalendar
   - CTooltip
   