@@ -18,6 +18,7 @@ public:
 protected:
 	virtual INT_PTR DialogProc(UINT uMsg, WPARAM wParam, LPARAM lParam);
 	virtual BOOL OnInitDialog();
+	virtual void OnOK();
 
 private:
 	CResizer m_Resizer;
