@@ -171,7 +171,7 @@ popd
 pushd ..\Tutorials
 
 REM: Compile Tutorials
-ECHO "Compliling Tutorials" >>"..\output\VS2005.log"
+ECHO "Compiling Tutorials" >>"..\output\VS2005.log"
 ::Compile code
 vcbuild /rebuild Tutorial1\Tutorial1_2005.vcproj debug 		>>"..\output\VS2005.log"
 vcbuild /rebuild Tutorial1\Tutorial1_2005.vcproj release		>>"..\output\VS2005.log"
